# cu_optimizations

./: .gitignore  Cargo.toml  install-solana-llvm.sh  readme.md  test-asm.sh
anchor/counter/: LICENSE  README.md  package-lock.json
anchor/counter/anchor/: Anchor.toml  package-lock.json  package.json
anchor/counter/anchor/programs/counter/: Cargo.toml
anchor/counter/anchor/programs/counter/src/: lib.rs
anchor/counter/anchor/tests/: counter.spec.ts
counterAnchor/anchor/: Anchor.toml  README.md
counterAnchor/anchor/programs/counter/: Cargo.toml
counterAnchor/anchor/src/: counter-exports.ts
counterAsm/: README.md  test-asm.sh
counterAsm/asm/: Makefile  main.s
counterAsm/src/: lib.rs
counterAsm/tests/: functional.rs
counterAsmSbpf/: .gitignore  README.md  package.json  tsconfig.json
counterAsmSbpf/src/sbpfCounter/: sbpfCounter.s
counterAsmSbpf/tests/: sbpfCounter.test.ts
counterC/: Cargo.toml  Makefile  README.md  install-solana-c.sh  test-c.sh  test-rust-mangle-c.sh
counterC/counter/: Cargo.toml
counterC/counter/src/: c-assembly-code.s  lib.rs  main.c  rust-unsave-c-code-assembly.s
counterC/counter/tests/: counter_test.rs
counterNative/: package.json  readme.md
counterNative/client/: client.ts
counterNative/program/: Cargo.toml
counterNative/program/src/: lib.rs
counterNative/tests/: native.test.ts
native/compute-optimizations/: README.md  package.json  pnpm-lock.yaml
native/compute-optimizations/program/: Cargo.toml  README.md  idl.json  keypair.json
native/compute-optimizations/scripts/: generate-clients.mjs
(+8 files in other folders)
