[package]
name = "counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
trace-compute = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.18.3"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}